[package]
name = "xpm"
version = "0.1.0"
authors = ["キーボードスレイヤー"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
yaml-rust = "0.4.5"
async-recursion = "0.3.1"

